crates/plotnik-tests/tests/02-parser/recovery_validation/anchor_in_labeled_branch.txt
Q = [
  Foo: .
  Bar: (pair)
]
------------------ DIAGNOSTICS -------------------
error: anchors cannot appear directly in alternations
 --> query.ptk:2:8
  |
2 |   Foo: .
  |        ^
  |
help: use `[{(a) . (b)} (c)]` to anchor within a branch
